# raylib_monster_taming_rpg

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
data/game/: attack_data.json  character_data.json  monster_data.json
data/maps/: arena.json  fire.json  hospital.json  hospital2.json  house.json  plant.json  water.json  world-backup.json  world.json  world.tmx
data/tilesets/: Grass.json  indoor.json  objects.json  world.json
shaders/: texture_grayscale.frag  texture_outline.frag
src/: assets.c  assets.h  assets_manager.c  assets_manager.h  character_entity.c  character_entity.h  colors.c  colors.h  common.c  common.h  game.c  game.h  game_data.c  game_data.h  main.c  maps_manager.c  maps_manager.h  monster_battle.c  monster_battle.h  monster_index.c  monster_index.h  monsters.c  monsters.h  player.c  player.h  raylib_extras.c  raylib_extras.h  settings.c  settings.h  sprites.c  sprites.h  timer.c  timer.h  ui.c  ui.h
src/array/: array.c  array.h
src/memory/: memory.c  memory.h
vendors/cute_headers/: cute_tiled.h
vendors/slog/src/: slog.c
